# biblioteca-web

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTH_CRUD_FIXES_SUMMARY.md  BOOK_CRUD_IMPLEMENTATION.md  CDL.csv  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Livros na Biblioteca.xlsm  QUICK_START.md  README.md  RECOVERY_books_py.md  RELEASE_NOTES_v1.1.0.md  RESUMO_ALTERACOES_v1.1.0.md  SECURITY.md  TECHNICAL_DOCUMENTATION.md  acervo.csv  app.py  atuais.csv  config.py  docker-compose.dev.yml  docker-compose.yml  estrutura_do_projeto.txt  lidos.csv  lighthouserc.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  search.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  question.md  question.yml
.github/workflows/: accessibility-audit.yml  main.yml
Scripts/: activate.fish  activate.nu
app/: __init__.py  extensions.py  main.py
app/controllers/: auth.py  books.py  defaut.py  routes.py
app/extensions/: extentions.py
app/models/: book_search.py  code_book.py  forms.py  modelsdb.py  tables.py
app/security/: middleware.py
app/services/: metadata_service.py  openlibrary_service.py
app/static/: about_your_library.html  base.html  edit_book.html  index.html  loan_book.html  login.html  profile.html  register.html  search.html  (+2 more)
config/: Dockerfile  nginx.conf
data/: acervo.csv  lidos.csv
docs/: FULL_RELEASE_MILESTONE_TEMPLATE.md  I18N_PREPARATION.md  MILESTONES.md  PROJECT_STRUCTURE.md
instance/: storage.db
library_venv/: main.py  pyvenv.cfg
nginx/: nginx.conf
scenes/: game.py
scripts/: add_search_indexes.py  bump_version.py  create_milestones.sh  migrate_book_crud.py  migrate_book_metadata.py  reset.sh
tests/: conftest.py  test_books.py
utils/: forms.py
(+53 files in other folders)
